# membuilder

./: .gitignore  CHANGELOG.md  PROJECT.md  README.md  membuilder.yaml  pyproject.toml
membuilder/: config.py  protocols.py
membuilder/adapters/: chunker.py  crawler.py  embedder.py
membuilder/adapters/vector_store/: chroma.py  milvus.py
membuilder/crawler/: checkpoint.py  crawler.py  models.py
membuilder/index/: embedder.py  protocol.py  store.py
membuilder/parser/: chunker.py  metadata.py  models.py
scripts/: crawl.py  debug_title.py  index.py  inspect_checkpoint.py  inspect_chunks.py  inspect_index.py  parse.py  patch_titles.py  validate_idempotency.py  validate_store_parity.py
tests/: test_integration.py  test_protocols.py  test_vector_store_milvus.py
